--- a/index.css
+++ b/index.css
@@ -1,88 +1,105 @@
-* {
-  box-sizing: border-box;
+.example {
+  padding: 20px;
+  color: white;
 }
-.col-1 {
-  width: 8.33%;
+
+/* Sample backgrounds for each query for testing purposes */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .accordion {
+    display: block;
+  }
 }
-.col-2 {
-  width: 16.66%;
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .example {
+    background: green;
+  }
 }
-.col-3 {
-  width: 25%;
+
+/* Medium devices (landscape tablets, 767px and up) */
+@media only screen and (min-width: 767px) {
+  .accordion {
+    display: none;
+  }
 }
-.col-4 {
-  width: 33.33%;
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .example {
+    background: orange;
+  }
 }
-.col-5 {
-  width: 41.66%;
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .example {
+    background: pink;
+  }
 }
-.col-6 {
-  width: 50%;
-}
-.col-7 {
-  width: 58.33%;
-}
-.col-8 {
-  width: 66.66%;
-}
-.col-9 {
-  width: 75%;
-}
-.col-10 {
-  width: 83.33%;
-}
-.col-11 {
-  width: 91.66%;
-}
-.col-12 {
+
+/* Accordion Styling */
+.accordion {
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+  padding: 15px;
   width: 100%;
+  text-align: left;
+  border: none;
+  border-bottom: 1px solid #000;
+  outline: none;
+  font-family: "Open Sans";
+  font-weight: bold;
 }
 
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
+.accordion:after {
+  content: "\002b";
+  float: right;
+  font-size: 16px;
+  color: #000;
+}
+.active:after {
+  content: "\2212";
 }
 
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
+.description {
+  background-color: #fff;
+  padding: 0 15px;
+  display: none;
+  overflow: hidden;
 }
 
-html {
-  font-family: "Lucida Sans", sans-serif;
+/* Tab Styling */
+
+.tab {
+  text-align: center;
+  overflow: hidden;
+  letter-spacing: -4px;
 }
 
-.header {
-  background-color: #9933cc;
-  color: #ffffff;
-  padding: 15px;
+.tab button {
+  background-color: inherit;
+  border: 1px solid #000;
+  outline: none;
+  cursor: pointer;
+  padding: 5px 20px;
 }
 
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.tab button:hover {
+  background-color: #000;
+  color: #fff;
 }
 
-.menu li {
-  padding: 8px;
-  margin-bottom: 7px;
-  background-color: #33b5e5;
-  color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+.tab button.active {
+  background-color: #000;
+  color: #fff;
 }
 
-.menu li:hover {
-  background-color: #0099cc;
-}
-
-.menu {
-  width: 25%;
-  float: left;
-}
-.main {
-  width: 75%;
-  float: left;
+.tab-content {
+  /* display: none; */
+  border: none;
+  text-align: center;
 }
