--- a/index.css
+++ b/index.css
@@ -1,9 +1,4 @@
-.example {
-  padding: 20px;
-  color: white;
-}
-
-/* Sample backgrounds for each query for testing purposes */
+/* CSS Media Queries */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -76,6 +71,8 @@
   outline: none;
   font-family: "Open Sans";
   font-weight: bold;
+
+  transition: 0.4s;
 }
 
 .accordion:after {
@@ -91,11 +88,13 @@
 .description {
   background-color: #fff;
   padding: 0 15px;
-  display: none;
   overflow: hidden;
   font-family: "Open Sans";
   font-size: 12px;
   text-align: center;
+
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
 }
 
 /* Tab Styling */
@@ -140,7 +139,18 @@
   text-align: center;
   font-family: "Open Sans";
   font-size: 12px;
+  animation: fadeEffect 1s;
 }
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Sub Tab Styling */
 
 .sub-tab-container {
   display: flex;
@@ -155,22 +165,8 @@
   font-size: 25px;
 }
 
-.active-sub-tab {
-  /* justify-content: center;*/
+.current-sub-tab {
   border-bottom: 1px solid #000;
   padding-bottom: 20px;
-  /* text-decoration: underline;
-  content: "\2212";
-  display: block;
-  color: #000; */
-}
-
-#title4 {
-  font-size: 12px;
-  /* font-weight: 700; */
-  /* margin-top: 5rem; */
-  border-bottom: 5px solid #000;
-  /* display: inline-block; */
-  padding-bottom: 10px;
-  font-family: sans-serif;
+  /* display: none; */
 }
